
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int __u8 ;


 int printf (char*,...) ;

void print_c(__u8 *s,int l){
 int k;
 for(k=0;k<l;k++){
  printf("\\x%.2x", s[k]);
  if(((k+1)%8)==0) printf("\n");
 }
 printf("\n");
}
